@@ -354,11 +354,18 @@ IF (ENABLE_LLINT)
     )
     TARGET_LINK_LIBRARIES(LLIntOffsetsExtractor ${WTF_LIBRARY_NAME})
 
+    # The build system will execute asm.rb every time LLIntOffsetsExtractor's mtime is newer than
+    # LLIntAssembly.h's mtime. The problem we have here is: asm.rb has some built-in optimization
+    # that generates a checksum of the LLIntOffsetsExtractor binary, if the checksum of the new
+    # LLIntOffsetsExtractor matches, no output is generated. To make this target consistent and avoid
+    # running this command for every build, we artificially update LLIntAssembly.h's mtime (using touch)
+    # after every asm.rb run.
     ADD_CUSTOM_COMMAND(
         OUTPUT ${DERIVED_SOURCES_JAVASCRIPTCORE_DIR}/LLIntAssembly.h
         MAIN_DEPENDENCY ${JAVASCRIPTCORE_DIR}/offlineasm/asm.rb
         DEPENDS LLIntOffsetsExtractor ${LLINT_ASM} ${OFFLINE_ASM}
         COMMAND ${RUBY_EXECUTABLE} ${JAVASCRIPTCORE_DIR}/offlineasm/asm.rb ${JAVASCRIPTCORE_DIR}/llint/LowLevelInterpreter.asm $<TARGET_FILE:LLIntOffsetsExtractor> ${DERIVED_SOURCES_JAVASCRIPTCORE_DIR}/LLIntAssembly.h
+        COMMAND ${CMAKE_COMMAND} -E touch_nocreate ${DERIVED_SOURCES_JAVASCRIPTCORE_DIR}/LLIntAssembly.h
         VERBATIM)
 
     # The explanation for not making LLIntAssembly.h part of the OBJECT_DEPENDS property of some of
